debog docker stop

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -339,7 +339,7 @@ deploy-dev-mongo:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
-    - docker stop dstair_mongodb # Arrête le container si existant
+    - docker ps -q -f name=dstair_mongodb && docker stop dstair_mongodb || echo "Le conteneur dstair_mongodb n'existe pas."
     - docker-compose -f docker-compose.mongo.yml up -d
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -397,7 +397,7 @@ deploy-dev-app:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
-    - docker stop dstair_flask_app # Arrête le container si existant
+    - docker ps -q -f name=dstair_flask_app && docker stop dstair_flask_app || echo "Le conteneur dstair_flask_app n'existe pas."
     - docker-compose -f docker-compose.app.yml up -d --remove-orphans #--remove-orphans: nettoyer les conteneurs orphelins
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -457,7 +457,7 @@ deploy-dev-app_admin:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
-    - docker stop dstair_app_admin # Arrête le container si existant
+    - docker ps -q -f name=dstair_app_admin && docker stop dstair_app_admin || echo "Le conteneur dstair_app_admin n'existe pas."
     - docker-compose -f docker-compose.app_admin.yml up -d --remove-orphans #--remove-orphans: nettoyer les conteneurs orphelins
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -515,7 +515,7 @@ deploy-dev-app_dash:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
-    - docker stop dstair_app_dash # Arrête le container si existant
+    - docker ps -q -f name=dstair_app_dash && docker stop dstair_app_dash || echo "Le conteneur dstair_app_dash n'existe pas."
     - docker-compose -f docker-compose.app_dash.yml up -d --remove-orphans #--remove-orphans: nettoyer les conteneurs orphelins
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -573,7 +573,7 @@ deploy-dev-app_form:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
-    - docker stop dstair_flask_app_form # Arrête le container si existant
+    - docker ps -q -f name=dstair_flask_app_form && docker stop dstair_flask_app_form || echo "Le conteneur dstair_flask_app_form n'existe pas."
     - docker-compose -f docker-compose.app_form.yml up -d --remove-orphans #--remove-orphans: nettoyer les conteneurs orphelins
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
