--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,13 @@ variables:
   APP_FORM_IMAGE: "guillaumegossmann/dst_airlines_app_form"
   APP_DASH_IMAGE: "guillaumegossmann/dst_airlines_app_dash"
   IP_VM: 127.0.0.1
-  PORT_DEV_MONGO: 27017
+  # PORT_DEV_MONGO: 27017
   PORT_DEV_APP: 5002
   PORT_DEV_APP_FORM: 5001
   PORT_DEV_APP_ADMIN: 5000
   PORT_DEV_APP_ADMIN_JUPYTER: 8888
   PORT_DEV_APP_DASH: 8051
-  PORT_PROD_MONGO: 17017
+  # PORT_PROD_MONGO: 17017
   PORT_PROD_APP: 15002
   PORT_PROD_APP_FORM: 15001
   PORT_PROD_APP_ADMIN: 15000
