--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,44 @@ services:
     networks:
       - dstair_network
 
+  mongodb_exporter:
+    image: bitnami/mongodb-exporter:latest
+    container_name: dstair_mongodb_exporter
+    environment:
+      MONGODB_URI: mongodb://${MONGO_ROOT_LOGIN}:${MONGO_ROOT_PASSWORD}@mongodb:27017
+    depends_on:
+      - mongodb
+    networks:
+      - dstair_network
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: dstair_prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+    depends_on:
+      - mongodb_exporter
+    networks:
+      - dstair_network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: dstair_grafana
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+    networks:
+      - dstair_network
+
+volumes:
+  grafana_data:
+
 networks:
   dstair_network:
     external: true
