--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,7 +221,7 @@ build-app:
   # image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app/*
   extends: 
     # - .do_dind
@@ -239,7 +239,7 @@ build-app_admin:
   # image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_admin/*
   extends: 
     # - .do_dind
@@ -257,7 +257,7 @@ build-app_dash:
   # image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_dash/*
   extends: 
     # - .do_dind
@@ -275,7 +275,7 @@ build-app_form:
   # image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_form/*
   extends: 
     # - .do_dind
