--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,9 +120,10 @@ services:
     environment:
       MONGODB_URI: mongodb://${MONGO_ROOT_LOGIN}:${MONGO_ROOT_PASSWORD}@mongodb:27017
     depends_on:
-      - mongodb
+      - dstair_mongodb
     networks:
       - dstair_network
+    restart: always
 
   prometheus:
     image: prom/prometheus:latest
@@ -133,8 +134,10 @@ services:
       - 9090:9090
     depends_on:
       - mongodb_exporter
+      # - cadvisor
     networks:
       - dstair_network
+    restart: always
 
   grafana:
     image: grafana/grafana:latest
@@ -147,8 +150,26 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
+    depends_on:
+      - prometheus
     networks:
       - dstair_network
+    restart: always
+
+  # cadvisor:
+  #   image: gcr.io/cadvisor/cadvisor
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:rw
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   ports:
+  #     - 8080:8080
+  #   networks:
+  #     - dstair_network
+  #   restart: always
+  #   deploy:
+  #     mode: global
 
 volumes:
   grafana_data:
