--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,20 +156,20 @@ services:
       - dstair_network
     restart: always
 
-  # cadvisor:
-  #   image: gcr.io/cadvisor/cadvisor
-  #   volumes:
-  #     - /:/rootfs:ro
-  #     - /var/run:/var/run:rw
-  #     - /sys:/sys:ro
-  #     - /var/lib/docker/:/var/lib/docker:ro
-  #   ports:
-  #     - 8080:8080
-  #   networks:
-  #     - dstair_network
-  #   restart: always
-  #   # deploy:
-  #   #   mode: global
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    ports:
+      - 8080:8080
+    networks:
+      - dstair_network
+    restart: always
+    # deploy:
+    #   mode: global
 
 volumes:
   grafana_data:
