--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -7,11 +7,11 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  # - job_name: "cadvisor"
-  #   # Remplacez la valeur globale par défaut et récupérez les cibles de cette tâche toutes les 5 secondes.
-  #   scrape_interval: 15s
-  #   static_configs:
-  #     - targets: ["cadvisor:8080"]
+  - job_name: "cadvisor"
+    # Remplacez la valeur globale par défaut et récupérez les cibles de cette tâche toutes les 5 secondes.
+    scrape_interval: 15s
+    static_configs:
+      - targets: ["cadvisor:8080"]
 
   - job_name: 'mongodb'
     scrape_interval: 15s
