--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -21,7 +21,8 @@ scrape_configs:
   - job_name: 'node_exporter'
     scrape_interval: 15s
     static_configs:
-      - targets: ['host.docker.internal:9100'] # host.docker.internal car le node explorer sera installé sur notre VM de prod
+      # - targets: ['host.docker.internal:9100'] # host.docker.internal car le node explorer sera installé sur notre VM de prod
+      - targets: ['localhost:9100']
 
   - job_name: 'flask_apps'
     scrape_interval: 15s
