--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -18,7 +18,7 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       # - targets: ['host.docker.internal:9100'] # host.docker.internal car le node explorer sera installé sur notre VM de prod
-      - targets: ['localhost:9100']
+      - targets: ['172.19.0.1:9100'] # 172.19.0.1 adresse de la gateway docker du dstair_network
 
   - job_name: 'flask_apps'
     scrape_interval: 15s
