--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ stages:
     - id  # Affiche l'UID et le GID de l'utilisateur
   variables:
     GIT_STRATEGY: fetch
-    GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/.ipynb_checkpoints/ -e app_admin/__pycache__/ -e app_admin/scripts/__pycache__/ -e app/__pycache__/ -e app_dash/__pycache__/ -e app_form/__pycache__/ -e app_form/scripts/__pycache__/ -e functions/__pycache__ -e model/__pycache__
+    GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/.ipynb_checkpoints/ -e app_admin/__pycache__/ -e app_admin/scripts/__pycache__/ -e app/__pycache__/ -e app_dash/__pycache__/ -e app_form/__pycache__/ -e app_form/scripts/__pycache__/ -e functions/__pycache__ -e model/__pycache__ -e .cache/
 
 .do_dind:
   services:
@@ -69,7 +69,7 @@ test-app:
   cache:
     key: ${CI_JOB_NAME}
     paths:
-      - .cache/pip/
+      - ~/.cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -89,9 +89,9 @@ test-app:
     # - pip install -r requirements.txt
     # - pip install pytest
     # - pip install --upgrade pyOpenSSL
-    - pip install --cache-dir=.cache/pip -r requirements.txt
-    - pip install --cache-dir=.cache/pip pytest
-    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
+    - pip install --cache-dir=~/.cache/pip -r requirements.txt
+    - pip install --cache-dir=~/.cache/pip pytest
+    - pip install --cache-dir=~/.cache/pip --upgrade pyOpenSSL
     - python3 ../init_db.py
     - python3 -m pytest tests/
 
@@ -112,7 +112,7 @@ test-app_admin:
   cache:
     key: ${CI_JOB_NAME}
     paths:
-      - .cache/pip/
+      - ~/.cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -128,9 +128,9 @@ test-app_admin:
     - cp -r model app_admin/model
     - cp -r functions app_admin/functions
     - cd app_admin/
-    - pip install --cache-dir=.cache/pip -r requirements.txt
-    - pip install --cache-dir=.cache/pip pytest
-    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
+    - pip install --cache-dir=~/.cache/pip -r requirements.txt
+    - pip install --cache-dir=~/.cache/pip pytest
+    - pip install --cache-dir=~/.cache/pip --upgrade pyOpenSSL
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
@@ -150,7 +150,7 @@ test-app_form:
   cache:
     key: ${CI_JOB_NAME}
     paths:
-      - .cache/pip/
+      - ~/.cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -165,10 +165,10 @@ test-app_form:
     - cp -r data_test app_form/data_test
     - cp -r functions app_form/functions
     - cd app_form/
-    - pip install --cache-dir=.cache/pip -r requirements.txt
-    - pip install --cache-dir=.cache/pip pytest
-    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
-    - pip install --cache-dir=.cache/pip pandas==2.0.3
+    - pip install --cache-dir=~/.cache/pip -r requirements.txt
+    - pip install --cache-dir=~/.cache/pip pytest
+    - pip install --cache-dir=~/.cache/pip --upgrade pyOpenSSL
+    - pip install --cache-dir=~/.cache/pip pandas==2.0.3
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
@@ -189,7 +189,7 @@ test-app_dash:
   cache:
     key: ${CI_JOB_NAME}
     paths:
-      - .cache/pip/
+      - ~/.cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -205,9 +205,9 @@ test-app_dash:
     - cp -r model app_dash/model
     - cp -r functions app_dash/functions
     - cd app_dash/
-    - pip install --cache-dir=.cache/pip -r requirements.txt
-    - pip install --cache-dir=.cache/pip pytest
-    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
+    - pip install --cache-dir=~/.cache/pip -r requirements.txt
+    - pip install --cache-dir=~/.cache/pip pytest
+    - pip install --cache-dir=~/.cache/pip --upgrade pyOpenSSL
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
