--- a/app_form/requirements.txt
+++ b/app_form/requirements.txt
@@ -4,6 +4,7 @@ requests==2.32.3          # Pour faire des requêtes HTTP, utilisée dans l'API 
 Werkzeug==3.0.4           # Pour la gestion des requêtes HTTP et des sessions
 flasgger                  # Pour la documentation Swagger de l'API
 numpy==1.23.0                  # Bibliothèque de calcul numérique, utilisée pour la gestion des tableaux et matrices de données
+prometheus-client
 
 #------------------------------
 # blinker==1.8.2
