--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -21,6 +21,7 @@ scrape_configs:
       - targets: ['172.19.0.1:9100'] # 172.19.0.1 adresse de la gateway docker du dstair_network
 
   - job_name: 'flask_app_form'
-    scrape_interval: 15s
+    scrape_interval: 5s
+    metrics_path: "/metrics"
     static_configs:
       - targets: ['dstair_flask_app_form:5001']
